# texttv

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-05-15-texttv-implementation.md
src/: cli.rs  config.rs  fetch.rs  interactive.rs  lib.rs  main.rs  mosaic.rs  parse.rs  render.rs  timing.rs
tests/: parse.rs
tests/fixtures/: page-200.texttv-nu.json  page-300.html  page-300.texttv-nu.json  page-empty.html
tools/git-hooks/: install.sh  post-commit
