[package]
name = "texttv"
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
authors = ["dfallman <dfallman@gmail.com>"]
description = "Render SVT Text-TV (Swedish public-television teletext) pages in the terminal"
readme = "README.md"
repository = "https://github.com/dfallman/texttv"
homepage = "https://github.com/dfallman/texttv"
license = "MIT"
keywords = ["teletext", "svt", "cli", "terminal", "tv"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ureq = { version = "2", features = ["tls"] }
viuer = "0.9"
image = { version = "0.25", default-features = false, features = ["gif"] }
base64 = "0.22"
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
owo-colors = "4"
anyhow = "1"
dirs = "6"

[profile.release]
lto = "thin"
strip = "symbols"

[package.metadata.release]
# Manual release flow: `cargo release patch` (or minor/major) bumps the
# version, commits, and tags `vX.Y.Z`. Pushing the tag triggers
# `.github/workflows/release.yml` which builds binaries and creates the
# GitHub release. Neither cargo-publish nor git-push is automatic — that's
# a deliberate human gate.
publish = false
push = false
tag-prefix = ""
tag-name = "v{{version}}"
pre-release-commit-message = "release v{{version}}"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
